Bug Fix: Widen table holder to center when table too wide

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 #main {
-  width: 960px;
+  width: 1200px;
   margin: 0 auto;
 }
 
@@ -17,7 +17,6 @@ body {
   background-color: #dc291e;
   display: inline-block;
   border-radius: 15px;
-  /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); */
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
